fix(select): don't wrap multiple choices in new lines
Fixes #6176

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -104,6 +104,10 @@ md-select {
   min-height: 26px;
   flex-grow: 1;
 
+  .md-text {
+    display: inline;
+  }
+
   *:first-child {
     flex: 1 0 auto;
     text-overflow: ellipsis;
